syntax = "proto2";

package com.trivago.streaming.toolkit.proto.mysql.accommodation;

option java_outer_classname = "accommodation_featureOuter";
option java_package = "com.trivago.streaming.toolkit.proto.mysql.accommodation";
option go_package = "com.trivago.streaming.toolkit.proto.mysql.accommodation";

message accommodation_feature {
    message PK {
        optional uint32 accommodation_id = 1;
        optional uint32 accommodation_ns = 2;
        optional uint32 accommodation_feature_id = 3;
        optional uint32 accommodation_feature_ns = 4;
    }
    optional PK key = 2;

    optional uint32 score = 3;
}